04-Network-Security-and-Cluster-Lifecycle/demos/m1-network-policies/network-policies/allow-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-frontend-to-backend
 namespace: backend
spec:
 podSelector:
   matchLabels:
     app: backend-app
 policyTypes:
 - Ingress
 ingress:
 - from:
   - namespaceSelector:        # AND logic: both selectors must match
       matchLabels:
         env: frontend
     podSelector:
       matchLabels:
         app: frontend-app
   ports:
   - protocol: TCP
     port: 9898
