04-Network-Security-and-Cluster-Lifecycle/demos/m1-network-policies/network-policies/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: backend
spec:
  podSelector: {}
  ingress: []
